# rust_grpc_telemetry

./: Cargo.toml  README.md  docker-compose.yml
proto/: helloworld.proto
src/: grpc_client.rs  grpc_first_server.rs  grpc_second_server.rs
