[package]
name = "rust_telemetry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-first-server"
path = "src/grpc_first_server.rs"

[[bin]]
name = "grpc-client"
path = "src/grpc_client.rs"

[dependencies]
tonic = { version = "0.6.1" }
tokio = { version = "1.0", features = ["full"] }
opentelemetry = { version = "0.16.0", features = [ "rt-tokio" ] }
opentelemetry-jaeger = { version = "0.15.0" }
tracing = { version = "0.1.29" }
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }
tracing-opentelemetry = { version = "0.16.0" }
tracing-futures = { version = "0.2.5" }

[build-dependencies]
tonic-build = { version = "0.6.0" }